2005-03-23  Marco Baringer  <mb@bese.it>

	* swank.lisp (commit-edited-value): Read a backquated string,
	instead of quating the result of read. This allows one to put
	,(form) into edit-value buffers.

2005-03-22  Helmut Eller  <heller@common-lisp.net>

	* swank-lispworks.lisp (swank-compile-string): Bind *print-radix*
	to t, to avoid problems if somebody uses different values for
	*print-base* and *read-base*.  Reported by Alain Picard.
	(emacs-connected): Add default methods for
	environment-display-notifier and environment-display-debugger.

2005-03-21  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (locate-compiler-note): Handle errors in macros
	better.
	(source-file-source-location): Read the snippet at the right
	position.

	* swank-source-file-cache.lisp (read-snippet): Take the start
	position as optional argument.

2005-03-21  Helmut Eller  <heller@common-lisp.net>

	* swank-sbcl.lisp (quit-lisp): If we are running multithreaded,
	terminate all other threads too.  (still broken in 0.8.20.27; used
	to work in ~0.8.20.2.)
	(with-debootstrapping, call-with-debootstrapping): Remove ugly
	backward compatibility code.
	(sbcl-source-file-p, guess-readtable-for-filename): New utilities.
	(function-source-location): Handle work off to helper functions.
	(find-function-source-location): New function.  Use the
	shebang-readtable for SBCL source files.
	(function-source-position, function-source-filename)
	(function-source-write-date, function-toplevel-form-number)
	(function-hint-snippet, function-has-start-location-p)
	(function-start-location): New helpers.
	(safe-source-location-for-emacs): Don't catch errors if
	*debug-definition-finding* is true.
	(inspect-for-emacs): Minor beautifications.
 
	* swank.lisp (commit-edited-value): Use buffer syntax.
	(compile-file-for-emacs, compile-string-for-emacs): Bind
	*compile-print* to nil.

	* swank-cmucl.lisp (call-with-debugging-environment): Rebind