@@ -1,3 +1,8 @@
+2005-03-27  Russell McManus <russell_mcmanus@yahoo.com>
+
+	* swank-clisp.lisp (getpid): Try sys::process-id if
+	sys::program-id doesn't exist.
+
 2005-03-23  Marco Baringer  <mb@bese.it>
 
 	* swank.lisp (commit-edited-value): Read a backquated string,
